Thu Sep 20 17:52:08 2001  Gary Wong  <gtw@research.att.com>

	* gnubg.c (CommandSaveSettings): Save "set beavers" setting, and
	eliminate duplicate "set egyptian".

Wed Sep 19 13:02:16 2001  Gary Wong  <gtw@research.att.com>

	* gtkboard.c (board_set): Recalculate the board pixmap if the
	chequer direction changes (required if the points are labelled).
	Reported by Ian Shaw.

Wed Sep 19 11:04:47 2001  Gary Wong  <gtw@research.att.com>

	* gtkboard.c (board_pointer): Move the single click move code to
	the button release handling.  This means that the left die can be
	moved from mouse button 1, in case the user has only a 2 button
	mouse (contributed by Peter Orum).

Mon Sep 10 12:49:54 2001  Gary Wong  <gtw@research.att.com>

	* gtkgame.c (CreateAnnotationWindow): Use gtk_paned_pack*() instead
	of gtk_paned_add*(), for better geometry control.

	* import.c (ImportJF): Add MOVE_SET* records when importing .pos
	files.

Thu Aug 30 10:05:52 2001  Gary Wong  <gtw@research.att.com>

	* gnubg.c (LoadRCFiles, CommandSaveSettings), gtkgame.c (InitGTK): Use
	szHomeDirectory instead of getenv( "HOME" ).

Wed Aug 29 11:14:05 2001  Gary Wong  <gtw@research.att.com>

	* analysis.c (LuckAnalysis): Correct luck analysis for first roll
	with asymmetric gammon prices.

	* gtkboard.c (board_beep): Name changed from Beep(), to avoid
	name collisions.

	* gtkboard.c (board_pointer): Allow entering edit mode (for changing
	name and score) when not playing a game.

	* set.c (CommandSetScore, CommandSetCrawford, CommandSetPostCrawford):
	Update the MOVE_GAMEINFO record when the score is changed.

Mon Aug 27 21:31:47 2001  Gary Wong  <gtw@research.att.com>

	* gtkgame.c (InitGTK): Fix the alignment of the statusbar label.

	* gtkboard.c (Beep): New function.
	* gtkprefs.c: Add an option to disable beeps on illegal input.
	(Suggested by Jeremie Petit and Alan Webb.)
	
Mon Aug 27 10:37:52 2001  Gary Wong  <gtw@research.att.com>
