@@ -24,5 +24,6 @@
 extern void ImportJF( FILE * fp, char *szFileName);
 extern void ImportMat( FILE *fp, char *szFilename );
 extern void ImportOldmoves( FILE *pf, char *szFilename );
+extern void ImportSGG( FILE *pf, char *szFilename );
 
 #endif
